<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/ic_address"
            android:title="@string/address" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/baseline_support_agent_24"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>