<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_order"
        android:title="@string/orders" />
    <item
        android:id="@+id/nav_address"
        android:icon="@drawable/icaddress_new"
        android:iconTint="@color/black"
        android:title="@string/address" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/baseline_support_agent_24"
        android:title="@string/support" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/baseline_settings_applications_24"
        android:title="@string/setting" />

</menu>