<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingFragment">



    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/animation_lmus90ar"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toTopOf="@+id/btnAboutUs"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginTop="@dimen/_25dp"
        android:background="@drawable/rectangle_shape"
        android:drawableStart="@drawable/ic_about"
        android:drawablePadding="@dimen/_8dp"
        android:drawableTint="@color/black"
        android:padding="@dimen/_8dp"
        android:text="@string/about"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black"
       app:layout_constraintBottom_toTopOf="@+id/btnLogout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_25dp"
        android:background="@drawable/rectangle_shape"
        android:drawableStart="@drawable/baseline_logout_24"
        android:drawablePadding="@dimen/_8dp"
        android:drawableTint="@color/black"
        android:padding="@dimen/_8dp"
        android:text="@string/logout"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/versionName" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/versionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:text="@string/versionName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>