<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="1dp"
    android:background="@drawable/green_gradient"
    android:layout_height="match_parent"
    tools:context=".fragments.Feedback">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="#FFC107"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rating"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Skip" />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/baseline_adb_24"
            android:textSize="20sp"
            android:maxLines="3"
            android:maxLength="200"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            app:layout_constraintStart_toStartOf="@id/rating" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="56dp"
            android:drawablePadding="10dp"
            android:text="देख देख देख यहाँ वहाँ ना फेंक गाड़ी वाला आया घर से कचरा निकाल"
            android:maxLength="200"
            android:textAlignment="center"
            android:maxLines="3"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="@id/feedback"
            app:layout_constraintTop_toBottomOf="@id/feedback" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/done"
            android:background="@drawable/btn_stroke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feedback" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>